# kitab

./: .gitignore  CMakeLists.txt
books/: 1.sqlite  10.sqlite  2.sqlite  6.sqlite  7.sqlite  8.sqlite
include/jamharah/: hash.h  index_format.h  normalize_arabic.h  tokenize_arabic.h
src/: arabic_stem.c  build_from_sqlite.c  build_index_pipeline.c  build_occurrences.c  build_postings.c  build_words_index.c  dump_postings_blocks.c  hash.c  index_format.c  normalize_arabic.c  search_core.c  search_snippets.c  sort_occurrences.c  tokenize_arabic.c
tests/: test_books_layout.c  test_index_format.c
web/js/: indexReader.js
